--- a/src/main/resources/templates/newpass.html
+++ b/src/main/resources/templates/newpass.html
@@ -24,7 +24,7 @@
         <div>
           <a href="bookland_home.html"><img src="/static/css/icon/booklogo.svg" width="70px" class="logo"></a>
         </div>
-        <div class="icon-3">
+        <div class="icon-3 order-num">
           <li class="user-none"><a href="account.html">
             <img src="/static/css/icon/user.svg" width="33px" class="user">
             <p>username</p>
@@ -37,8 +37,13 @@
         </li>
           <li class="login-none"><a href="login.html"><img src="/static/css/icon/login.svg" width="30px"
                 class="login"></a></li>
-          <li><a href="cart.html"><img src="/static/css/icon/cart.svg" width="25px" class="cart"></a></li>
-          <li><a href="javascript:void(0);"><img src="/static/css/icon/msg3.svg" width="30px" class="msg"></a>
+          <li>
+            <p class="order-number">0</p>
+            <a href="cart.html">
+              <img src="/static/css/icon/cart.svg" width="25px" class="cart">
+            </a>
+          </li>
+          <li><a href="message.html"><img src="/static/css/icon/msg3.svg" width="30px" class="msg"></a>
           </li>
         </div>
         </ul>
