--- a/src/main/resources/templates/bookland_home.html
+++ b/src/main/resources/templates/bookland_home.html
@@ -20,7 +20,7 @@
       <div>
         <a href="bookland_home.html"><img src="/static/css/icon/booklogo.svg" width="70px" class="logo"></a>
       </div>
-      <div class="icon-3">
+      <div class="icon-3 order-num">
         <li sec:authorize="${isAuthenticated()}" class="user-none">
           <a href="javascript:void(0);">
           <img src="/static/css/icon/user.svg" width="33px" class="user">
@@ -33,8 +33,13 @@
         </ul>
       </li>
         <li sec:authorize="${!isAuthenticated()}" class="login-none"><a href="/login"><img src="/static/css/icon/login.svg" width="30px" class="login"></a></li>
-        <li><a href="cart.html"><img src="/static/css/icon/cart.svg" width="25px" class="cart"></a></li>
-        <li><a href="javascript:void(0);"><img src="/static/css/icon/msg3.svg" width="30px" class="msg"></a></li>
+        <li>
+          <p class="order-number">0</p>
+          <a href="cart.html">
+            <img src="/static/css/icon/cart.svg" width="25px" class="cart">
+          </a>
+        </li>
+        <li><a href="message.html"><img src="/static/css/icon/msg3.svg" width="30px" class="msg"></a></li>
       </div>
       </ul>
     </div>
@@ -350,18 +355,18 @@
   </div>
   <div class="container ">
     <div class="row">
-      <div class="col-12 col-sm-6">
+      <div class="col-12 col-md-6">
         <img src="/static/img/comingup1.jpg" alt="The Echo" width="100%">
       </div>
-      <div class="col-12 col-sm-6 text-booklaunch">
+      <div class="col-12 col-md-6 text-booklaunch">
         <h5 class="date">上架日 : 5/5</h5>
         <h4>The Echo : Chicago's newspaper </h4>
         <p class="detail">
           <small>Hardcover,22 x 30 cm,2.1kg,511 pages</small>
         </p>
-        <p>藝術家威爾·布拉德利 (Will Bradley) 的新藝術風格的海報廣告系列 "The Echo"，當時每兩週發表一次，具有 "幽默和藝術性"
+        <p class="p-txt">藝術家威爾·布拉德利 (Will Bradley) 的新藝術風格的海報廣告系列 "The Echo"，當時每兩週發表一次，具有 "幽默和藝術性"
           內容的新報紙，總計收錄了200件海報，讀者們可一探究竟當時新藝術風的盛行。</p>
-        <h5>NT 1190</h5>
+        <h6>NT 1190</h6>
         <div class="orderbook">
           <button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="top" title="訂購時間約3個月">
             預訂
@@ -372,17 +377,17 @@
   </div>
   <div class="container ">
     <div class="row">
-      <div class="col-12 col-sm-6">
+      <div class="col-12 col-md-6">
         <img src="/static/img/comingup2.jpg" alt="Alfred Sisley" width="100%">
       </div>
-      <div class="col-12 col-sm-6 text-booklaunch">
+      <div class="col-12 col-md-6 text-booklaunch">
         <h5 class="date">上架日 : 6/10</h5>
         <h4>Alfred Sisley : Landscape</h4>
         <p class="detail">
           <small>Hardcover,28 x 30 cm,2.5kg,368 pages</small>
         </p>
-        <p>西斯萊( Sisley )受到巴比松畫派的影響，用色明亮，景物清晰。他喜歡用橘紅色來描繪陽光普照的景色，連雪景畫和洪水題材的畫作也充滿暖意，以色彩的交響融化了悲劇成分。</p>
-        <h5>NT 1390</h5>
+        <p class="p-txt">西斯萊( Sisley )受到巴比松畫派的影響，用色明亮，景物清晰。他喜歡用橘紅色來描繪陽光普照的景色，連雪景畫和洪水題材的畫作也充滿暖意，以色彩的交響融化了悲劇成分。</p>
+        <h6>NT 1390</h6>
         <div class="orderbook">
           <button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="top" title="訂購時間約3個月">
             預訂
