--- a/src/main/resources/templates/message.html
+++ b/src/main/resources/templates/message.html
@@ -23,7 +23,7 @@
               <div>
                 <a href="bookland_home.html"><img src="/static/css/icon/booklogo.svg" width="70px" class="logo"></a>
               </div>
-              <div class="icon-3">
+              <div class="icon-3 order-num">
                 <li class="user-none"><a href="account.html">
                   <img src="/static/css/icon/user.svg" width="33px" class="user">
                   <p>username</p>
@@ -35,8 +35,13 @@
                 </ul>
               </li>
                 <li class="login-none"><a href="login.html"><img src="/static/css/icon/login.svg" width="30px" class="login"></a></li>
-                <li><a href="cart.html"><img src="/static/css/icon/cart.svg" width="25px" class="cart"></a></li>
-                <li><a href="javascript:void(0);"><img src="/static/css/icon/msg3.svg" width="30px" class="msg"></a></li>
+                <li>
+                  <p class="order-number">0</p>
+                  <a href="cart.html">
+                    <img src="/static/css/icon/cart.svg" width="25px" class="cart">
+                  </a>
+                </li>
+                <li><a href="message.html"><img src="/static/css/icon/msg3.svg" width="30px" class="msg"></a></li>
               </div>
               </ul>
             </div>
@@ -115,38 +120,40 @@
      <!-- 導覽列 end -->
 
      <!-- message 區 start -->
-     <div class="changepass-form">
-      <div class="card border-info mb-3 passform">
+     <div class="message">
+      <div class="card border-info mb-3 message-form">
         <div class="card-header">Contact us</div>
         <div class="card-body text-info">
-          <form class="loginform">
+          <form class="msg-form">
             <div class="form-group">
               <label for="exampleInputPassword1">姓名</label>
               <div class="inputerror">
-                <input type="password" class="form-control " id="newpassword1" placeholder="New Password">
+                <input type="text" class="form-control " id="newpassword1" placeholder="Full Name">
               </div>
               <br>
               <label for="exampleInputPassword1">E-mail</label>
               <div class="inputerror">
-                <input type="password" class="form-control " id="newpassword2" placeholder="Confirm Password">
+                <input type="text" class="form-control " id="newpassword2" placeholder="E-mail Address">
               </div>
+              <br>
               <div class="form-group">
-                <label for="exampleFormControlSelect1">問題</label>
+                <label for="exampleFormControlSelect1">問題類型</label>
                 <select class="form-control" id="exampleFormControlSelect1">
-                  <option>1</option>
-                  <option>2</option>
-                  <option>3</option>
-                  <option>4</option>
-                  <option>5</option>
+                  <option>訂單問題</option>
+                  <option>付款相關問題</option>
+                  <option>更改運送地址</option>
+                  <option>配送相關問題</option>
+                  <option>其他</option>
                 </select>
               </div>
+              <br>
               <div class="form-group">
                 <label for="exampleFormControlTextarea1">留言</label>
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Message" rows="3"></textarea>
               </div>
             </div>
-            <div class="new-btn">
-              <button type="button" class="btn btn-secondary btn-block newpass-btn">Send Message</button>
+            <div class="msg-btn">
+              <button type="button" class="btn btn-secondary btn-block message-btn">Send Message</button>
             </div>
           </form>
         </div>
