--- a/src/main/resources/templates/bookland_home.html
+++ b/src/main/resources/templates/bookland_home.html
@@ -223,18 +223,18 @@
   <div class="container obj-books">
     <div class="row">
       <div class="col-12 col-sm-4">
-        <a href="javascript:void(0);"><img src="/static/img/obj_bookcover1.png" alt="book1-about-poster-bookcover"></a>
+        <a href="/book/insidepage/poster-calendar"><img src="/static/img/obj_bookcover1.png" alt="book1-about-poster-bookcover"></a>
       </div>
       <div class="col-12 col-sm-4">
-        <a href="javascript:void(0);"><img src="/static/img/obj_bookcover3.png" alt="book3-about-poster-bookcover"></a>
+        <a href="/book/insidepage/d-m-ferry-cos"><img src="/static/img/obj_bookcover3.png" alt="book3-about-poster-bookcover"></a>
       </div>
       <div class="col-12 col-sm-4">
-        <a href="javascript:void(0);"><img src="/static/img/obj_bookcover2.png" alt="book2-about-poster-bookcover"></a>
+        <a href="/book/insidepage/the-new-york"><img src="/static/img/obj_bookcover2.png" alt="book2-about-poster-bookcover"></a>
       </div>
     </div>
   </div>
   <div class="showall">
-    <a href="posterbook.html">
+    <a href="/book/poster-design">
     <button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="top" title="All poster book">
      Show all >
     </button>
