--- a/src/main/resources/templates/book-cat.html
+++ b/src/main/resources/templates/book-cat.html
@@ -104,7 +104,7 @@
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="magazine.html">MAGAZINES</a>
+            <a class="nav-link" href="/book/magazine">MAGAZINES</a>
           </li>
 
           <li class="nav-item">
@@ -192,6 +192,15 @@
   <script src="/static/js/views/bookView.js"></script>
   <script src="/static/js/models/bookModel.js"></script>
   <script src="/static/js/controllers/bookController.js"></script>
+
+<!-- loading 圖示 start  -->
+<div class="load-item">
+  <div class="load-pic">
+    <img src="/static/css/icon/colorbook-load.png" class="book-p">
+  </div>
+</div>
+<!-- loading 圖示 end  -->
+
 </body>
 
 
