--- a/src/main/resources/templates/bookland_home.html
+++ b/src/main/resources/templates/bookland_home.html
@@ -162,7 +162,7 @@
           <div class="brspace">
           </div>
           <div class="arrow-1">
-            <a href="insidepage.html"><img src="/static/css/icon/arrow.svg" alt="arrow-icon" width="35px"></a>
+            <a href="/book/insidepage/paul-gauguin"><img src="/static/css/icon/arrow.svg" alt="arrow-icon" width="35px"></a>
           </div>
         </div>
       </div>
@@ -419,6 +419,14 @@
     $('.hide').toggle();
   })
 </script>
+
+<!-- loading 圖示 start  -->
+<div class="load-item">
+  <div class="load-pic">
+    <img src="/static/css/icon/colorbook-load.png" class="book-p">
+  </div>
+</div>
+<!-- loading 圖示 end  -->
 
 </body>
 </html>
