--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -1,6 +1,6 @@
 <!-- 開頭模板區 start -->
 <!doctype html>
-<html lang="en">
+<html lang="en" xmlns:th="https://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security"></html>>
   <head>
     <!-- Required meta tags -->
     <link rel="shortcut icon" type="image/x-icon" href="/static/css/icon/bookico.svg">
@@ -24,9 +24,10 @@
               <a href="bookland_home.html"><img src="/static/css/icon/booklogo.svg" width="70px" class="logo"></a>
             </div>
             <div class="icon-3 order-num">
-              <li class="user-none"><a href="account.html">
+              <li sec:authorize="${isAuthenticated()}" class="user-none">
+                <a href="javascript:void(0);">
                 <img src="/static/css/icon/user.svg" width="33px" class="user">
-                <p>username</p>
+                <p sec:authentication="name"></p>
               </a>
               <ul class="list-group hide">
                 <li class="list-group-item "><a href="account.html">帳戶資訊</a></li>
@@ -34,7 +35,7 @@
                 <li class="list-group-item"><a href="/logout">登出</a></li>
               </ul>
             </li>
-              <li class="login-none"><a href="login.html"><img src="/static/css/icon/login.svg" width="30px" class="login"></a></li>
+              <li sec:authorize="${!isAuthenticated()}" class="login-none"><a href="/login"><img src="/static/css/icon/login.svg" width="30px" class="login"></a></li>
               <li>
                 <p class="order-number">0</p>
                 <a href="cart.html">
@@ -85,7 +86,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                  <a class="nav-link" href="new.html">NEW</a>
+                  <a class="nav-link" href="/new">NEW</a>
                 </li>
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
@@ -93,17 +94,17 @@
                     BOOKS
                   </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="all.html">全部 All</a>
+                    <a class="dropdown-item" href="/book/all">全部 All</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="fineart.html">美術 Fine Art</a>
+                    <a class="dropdown-item" href="/book/fine-art">美術 Fine Art</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="photography.html">攝影 Photography</a>
+                    <a class="dropdown-item" href=/book/photography">攝影 Photography</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="posterbook.html">海報 & 設計 Poster & Design</a>
+                    <a class="dropdown-item" href="/book/poster-design">海報 & 設計 Poster & Design</a>
                   </div>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="magazine.html">MAGAZINES</a>
+                  <a class="nav-link" href="/book/magazine">MAGAZINES</a>
                 </li>
         
                 <li class="nav-item">
@@ -124,8 +125,8 @@
   <div class="col-12 text-center">
     <nav aria-label="breadcrumb">
       <ol class="breadcrumb alig">
-        <li class="breadcrumb-item"><a href="bookland_home.html">Home</a></li>
-        <li class="breadcrumb-item active" aria-current="page">About</li>
+        <li class="breadcrumb-item"><a href="/">Home</a></li>
+        <li class="breadcrumb-item active" aria-current="page"><span th:text="${category}"></span></li>
       </ol>
     </nav>
   </div>
@@ -133,7 +134,7 @@
 
   <!--------------------title start----------------------------->
   <div class="title">
-    <h3>ABOUT</h3>
+    <h3><span th:text="${category.toUpperCase()}"></span></h3>
   </div>
   <!--------------------title end---------------------------->
 
@@ -160,7 +161,15 @@
         $('.hide').toggle();
       })
     </script>
-  
+
+    <!-- loading 圖示 start  -->
+    <div class="load-item">
+      <div class="load-pic">
+        <img src="/static/css/icon/colorbook-load.png" class="book-p">
+      </div>
+    </div>
+    <!-- loading 圖示 end  -->
+    
 </body>
 
 
