--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -263,6 +263,14 @@
     })
   </script>
   
+  <!-- loading 圖示 start  -->
+  <div class="load-item">
+    <div class="load-pic">
+      <img src="/static/css/icon/colorbook-load.png" class="book-p">
+    </div>
+  </div>
+  <!-- loading 圖示 end  -->
+  
 </body>
 
 </html>
