--- a/src/main/resources/templates/new.html
+++ b/src/main/resources/templates/new.html
@@ -323,6 +323,15 @@
       $('.hide').toggle();
     })
   </script>
+
+  <!-- loading 圖示 start  -->
+  <div class="load-item">
+    <div class="load-pic">
+      <img src="/static/css/icon/colorbook-load.png" class="book-p">
+    </div>
+  </div>
+  <!-- loading 圖示 end  -->
+  
 </body>
 
 
