修改首頁 fixed視窗與css連結

--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -1,175 +1,10 @@
-/* --------logo & icon start----------------- */
-.jumbotron{
-    margin-bottom: 0px;
-    background-color: #fff;
-}
-.jumbotron .container-fluid li{
-    list-style: none;
-    padding: 0 10px;
-}
-/* 會員帳號管理 start */
-.user-none a{
-    display: flex;
-    text-decoration: none;
-    color:#495057;
-}
-.user-none p{
-    margin-bottom: 0px;
-    line-height: 30px;
-    color:#3aafa9;
-    
-}
-.list-group{
-    /* 會員帳號管理 定位 */
-    position: fixed;
-    z-index: 100;    
-    transform: translateX(6px); 
-    box-shadow: 5px 5px 8px #adadad81; 
-}
-.list-group .list-group-item{
-    /* 會員帳號管理細目選項 */
-    font-family:"微軟正黑體","黑體","宋體",sans-serif;
-    font-size: 10px;
-    width: 102px;
-}
-li .list-group .list-group-item{
-    padding: 10px;
-}
-.list-group .list-group-item:hover{
-    /* 會員帳號管理細目選項 */
-    background-color: #EAC100;
-    border-color: #EAC100; 
-   
-}
-.list-group .list-group-item a:hover{
-    /* 會員帳號管理細目選項 */
-    color:#fff;
-}
-.hide{
-    /* 會員帳號管理 一開始是隱藏的 */
-   display: none;
-}
-/* 會員帳號管理 end */
 
-/* 購物車 數量 start */
-.order-num{
-    position: relative;
-}
-.order-number{
-    position: absolute;
-    margin: 0px;
-    background-color: #fc4445;
-    border:1px solid #fc4445;
-    border-radius: 2px;
-    color:#fff;
-    width: 14px;
-    line-height: 14px;
-    font-size: small;
-    text-align: center;
-    align-items: center;
-    transform: translate(-60%, -25%);
-    /* 隱藏購物車樣式 start */
-    /* display: none; */
-     /* 隱藏購物車樣式 end */
-
-}
-
-/* 購物車 數量 end */
-
-.jumbotron .container-fluid{
-    padding: 0 30px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
-.jumbotron .container-fluid .icon-3{
-    display: flex;
-    flex-direction: row;
-   
-}
-.container-fluid div{
-    display: inline-block;
-}
-@media (max-width: 576px){
-    .logo{
-        width: 60px;
-    }
-    .jumbotron{
-        padding-bottom: 2rem;
-    }
-}
-@media (min-width: 576px){
-.jumbotron {
-    padding-top: 2rem;
-
-}
-}
-/* --------logo & icon end----------------- */
-
-/* ----------導覽列 區 start-------------- */
-.bg-light {
-    background-color: #fff!important;
-}
-.navbar{
-    padding-right: 2rem;
-    padding-left: 2rem;
-}
-.line:hover{
-   transform:rotate(20deg);
- }
- .dropdown-menu a:active{
-     background-color:#EAC100;
- }
-
-.btn.focus, .btn:focus {
-    outline: none;  
-    box-shadow:none;
-} 
-.btn-line{
-    background-color:transparent;
-   
-}
-.btn-search{
-    padding:5px 10px !important;
-}
+/* 首頁的搜尋button 樣式 start */
 .form-inline .btn-outline-success{
     border: 1px solid transparent;
     border-color: #28a745;
 }
-
-.modal-content{
-    align-items: center;
-    position: relative;
-}
-.modal-content .btn-x{
-    font-family: Arial, Helvetica, sans-serif;
-    text-decoration: none;
-    background-color: #fff;
-    border:2px solid rgb(20, 20, 20);
-    color:rgb(22, 22, 22);
-    position: absolute;
-    width: 30px;
-    height: 30px;
-    line-height: 25px;
-    text-align: center;
-    top:-8px;
-    right:-8px;
-    border-radius: 50px;
-}
-.modal-content .btn-x:hover{
-    background-color: rgb(179, 179, 179);
-}
-.modal-content img{
-    width: 90%;
-}
-.form-control:focus {
-    color: #495057;
-    background-color: #fff;
-    border-color: #808080;
-    outline: 0;
-    box-shadow: 0 0 0 0.2rem rgb(108 108 108 / 25%);
-}
-/* ----------導覽列 區 end-------------- */
+/* 首頁的搜尋button 樣式 end */
 
 /* ----------banner 區 start-------------- */
  .carousel-indicators li {
