--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -35,7 +35,8 @@
                 <li class="list-group-item"><a href="/logout">登出</a></li>
               </ul>
             </li>
-              <li sec:authorize="${!isAuthenticated()}" class="login-none"><a href="/login"><img src="/static/css/icon/login.svg" width="30px" class="login"></a></li>
+              <li sec:authorize="${!isAuthenticated()}" class="login-none"><a href="/login">
+                <img src="/static/css/icon/login.svg" width="30px" class="login"></a></li>
               <li>
                 <p class="order-number">0</p>
                 <a href="cart.html">
@@ -98,7 +99,7 @@
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="/book/fine-art">美術 Fine Art</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href=/book/photography">攝影 Photography</a>
+                    <a class="dropdown-item" href="/book/photography">攝影 Photography</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="/book/poster-design">海報 & 設計 Poster & Design</a>
                   </div>
