--- a/src/main/resources/templates/account.html
+++ b/src/main/resources/templates/account.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" xmlns:th="https://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <head>
   <!-- Required meta tags -->
@@ -21,12 +21,13 @@
     <div class="jumbotron jumbotron-fluid">
       <div class="container-fluid">
         <div>
-          <a href="bookland_home.html"><img src="/static/css/icon/booklogo.svg" width="70px" class="logo"></a>
+          <a href="/"><img src="/static/css/icon/booklogo.svg" width="70px" class="logo"></a>
         </div>
         <div class="icon-3 order-num">
-          <li class="user-none"><a href="javascript:void(0);">
+          <li sec:authorize="${isAuthenticated()}" class="user-none">
+            <a href="javascript:void(0);">
             <img src="/static/css/icon/user.svg" width="33px" class="user">
-            <p>username</p>
+            <p sec:authentication="name"></p>
           </a>
           <ul class="list-group hide">
             <li class="list-group-item "><a href="account.html">帳戶資訊</a></li>
@@ -34,8 +35,8 @@
             <li class="list-group-item"><a href="/logout">登出</a></li>
           </ul>
           </li>
-          <li class="login-none"><a href="login.html"><img src="/static/css/icon/login.svg" width="30px"
-                class="login"></a></li>
+          <li sec:authorize="${!isAuthenticated()}" class="login-none"><a href="/login">
+            <img src="/static/css/icon/login.svg" width="30px" class="login"></a></li>
           <li>
             <p class="order-number">0</p>
             <a href="cart.html">
@@ -86,7 +87,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link" href="new.html">NEW</a>
+            <a class="nav-link" href="/new">NEW</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
@@ -94,17 +95,17 @@
               BOOKS
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="all.html">全部 All</a>
+              <a class="dropdown-item" href="/book/all">全部 All</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="fineart.html">美術 Fine Art</a>
+              <a class="dropdown-item" href="/book/fine-art">美術 Fine Art</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="photography.html">攝影 Photography</a>
+              <a class="dropdown-item" href="/book/photography">攝影 Photography</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="posterbook.html">海報 & 設計 Poster & Design</a>
+              <a class="dropdown-item" href="/book/poster-design">海報 & 設計 Poster & Design</a>
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="magazine.html">MAGAZINES</a>
+            <a class="nav-link" href="/book/magazine">MAGAZINES</a>
           </li>
 
           <li class="nav-item">
@@ -365,7 +366,7 @@
   <!-- footer 區 start -->
   <footer>
     <div class="co">
-      <span>Copyright &copy; 2021 <a class="backhome" href="bookland_home.html"><strong>BookLand</strong></a> </span>
+      <span>Copyright &copy; 2021 <a class="backhome" href="/"><strong>BookLand</strong></a> </span>
     </div>
   </footer>
   <!-- footer 區 end -->
@@ -378,13 +379,11 @@
 
    <!-- 會員帳號管理 icon button -->
    <script>
-    $('.user-none').hover(function(){
-      $('.hide').toggle();
-    })
+    $('.user-none').hover(() => $('.user-none .hide').toggle())
   </script>
 
 <!-- loading 圖示 start  -->
-<div class="load-item">
+<div class="load-item hide">
   <div class="load-pic">
     <img src="/static/css/icon/colorbook-load.png" class="book-p">
   </div>
