--- a/src/main/resources/templates/bookland_home.html
+++ b/src/main/resources/templates/bookland_home.html
@@ -9,109 +9,115 @@
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="/static/vendor/bootstrap-4.1.3/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/static/css/model-css.css">
   <link rel="stylesheet" href="/static/css/index.css">
   <title>BookLand Bookshop</title>
 </head>
 <body>
 
   <!----------logo icon區域 start-------------->
-  <div class="jumbotron jumbotron-fluid">
-    <div class="container-fluid">
-      <div>
-        <a href="/"><img src="/static/css/icon/booklogo.svg" width="70px" class="logo"></a>
+  <header>
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container-fluid">
+          <div>
+            <a href="/"><img src="/static/css/icon/booklogo.svg" width="70px" class="logo"></a>
+          </div>
+          <div class="icon-3 order-num">
+            <li sec:authorize="${isAuthenticated()}" class="user-none">
+              <a href="javascript:void(0);">
+              <img src="/static/css/icon/user.svg" width="33px" class="user">
+              <p sec:authentication="name"></p>
+            </a>
+            <ul class="list-group hide">
+              <li class="list-group-item "><a href="account.html">帳戶資訊</a></li>
+              <li class="list-group-item"><a href="newpass.html">更改密碼</a></li>
+              <li class="list-group-item"><a href="/logout">登出</a></li>
+            </ul>
+          </li>
+            <li sec:authorize="${!isAuthenticated()}" class="login-none"><a href="/login">
+              <img src="/static/css/icon/login.svg" width="30px" class="login"></a></li>
+            <li>
+              <p class="order-number">0</p>
+              <a href="cart.html">
+              <img src="/static/css/icon/cart.svg" width="25px" class="cart">
+            </a>
+          </li>
+            <li><a href="message.html"><img src="/static/css/icon/msg3.svg" width="30px" class="msg"></a></li>
+          </div>
+          </ul>
+        </div>
       </div>
-      <div class="icon-3 order-num">
-        <li sec:authorize="${isAuthenticated()}" class="user-none">
-          <a href="javascript:void(0);">
-          <img src="/static/css/icon/user.svg" width="33px" class="user">
-          <p sec:authentication="name"></p>
-        </a>
-        <ul class="list-group hide">
-          <li class="list-group-item "><a href="account.html">帳戶資訊</a></li>
-          <li class="list-group-item"><a href="newpass.html">更改密碼</a></li>
-          <li class="list-group-item"><a href="/logout">登出</a></li>
-        </ul>
-      </li>
-        <li sec:authorize="${!isAuthenticated()}" class="login-none"><a href="/login"><img src="/static/css/icon/login.svg" width="30px" class="login"></a></li>
-        <li>
-          <p class="order-number">0</p>
-          <a href="cart.html">
-            <img src="/static/css/icon/cart.svg" width="25px" class="cart">
-          </a>
-        </li>
-        <li><a href="message.html"><img src="/static/css/icon/msg3.svg" width="30px" class="msg"></a></li>
-      </div>
-      </ul>
-    </div>
-  </div>
+</header>  
   <!----------logo icon區域 end-------------->
 
   <!----------導覽列 區 start -------------->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <navbar>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
 
-    <button type="button" class="btn btn-line" data-toggle="modal" data-target=".bd-example-modal-sm">
-      <img src="/static/css/icon/colorline.svg" width="40px" class="line"></button>
-    <div class="modal fade bd-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel"
-      aria-hidden="true">
-      <div class="modal-dialog modal-sm">
-        <div class="modal-content">
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span class="btn-x" aria-hidden="true">&times;</span>
-          </button>
+      <button type="button" class="btn btn-line" data-toggle="modal" data-target=".bd-example-modal-sm">
+        <img src="/static/css/icon/colorline.svg" width="40px" class="line"></button>
+      <div class="modal fade bd-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog modal-sm">
+          <div class="modal-content">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span class="btn-x" aria-hidden="true">&times;</span>
+            </button>
 
-          <br>
-          <strong>加 BookLand 好友吧 !</strong><br>
-          <img src="/static/css/icon/qrcode.png" alt="bookland-qr-code">
-          <strong style="color:brown">ID : @454avqhn</strong><br>
-          <p>任何問題都可詢問 BookLand ~<br>
-            BookLand 會盡快回覆您 ~</p>
+            <br>
+            <strong>加 BookLand 好友吧 !</strong><br>
+            <img src="/static/css/icon/qrcode.png" alt="bookland-qr-code">
+            <strong style="color:brown">ID : @454avqhn</strong><br>
+            <p>任何問題都可詢問 BookLand ~<br>
+              BookLand 會盡快回覆您 ~</p>
+          </div>
         </div>
       </div>
-    </div>
 
 
 
 
 
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="/new">NEW</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-            aria-haspopup="true" aria-expanded="false">
-            BOOKS
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="/book/all">全部 All</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="/book/fine-art">美術 Fine Art</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="/book/photography">攝影 Photography</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="/book/poster-design">海報 & 設計 Poster & Design</a>
-          </div>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/book/magazine">MAGAZINES</a>
-        </li>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="/new">NEW</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
+              BOOKS
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="/book/all">全部 All</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="/book/fine-art">美術 Fine Art</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="/book/photography">攝影 Photography</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="/book/poster-design">海報 & 設計 Poster & Design</a>
+            </div>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/book/magazine">MAGAZINES</a>
+          </li>
 
-        <li class="nav-item">
-          <a class="nav-link " href="about.html">ABOUT</a>
-        </li>
-      </ul>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Key Words" aria-label="Search">
-        <button class="btn btn-search btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-      </form>
-    </div>
-  </nav>
+          <li class="nav-item">
+            <a class="nav-link " href="about.html">ABOUT</a>
+          </li>
+        </ul>
+        <form class="form-inline my-2 my-lg-0">
+          <input class="form-control mr-sm-2" type="search" placeholder="Key Words" aria-label="Search">
+          <button class="btn btn-search btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form>
+      </div>
+    </nav>
+  </navbar>
   <!----------導覽列 區 end -------------->
 
   <!----------banner 區 start -------------->
