--- a/src/main/resources/templates/new.html
+++ b/src/main/resources/templates/new.html
@@ -147,7 +147,7 @@
           <div class="card-body">
             <p class="card-text">Still Life</p>
             <p><strong>NT 800</strong></p>
-            <button type="button" class="btn btn-outline-dark">more</button>
+            <a href="/book/insidepage/still-life" class="btn btn-outline-dark">more</a>
             <button type="button" class="btn btn-outline-danger">Add to Cart</button>
           </div>
         </div>
@@ -158,7 +158,7 @@
           <div class="card-body">
             <p class="card-text">Sunday World</p>
             <p><strong>NT 975</strong></p>
-            <button type="button" class="btn btn-outline-dark">more</button>
+            <a href="/book/insidepage/sunday-world" class="btn btn-outline-dark">more</a>
             <button type="button" class="btn btn-outline-danger">Add to Cart</button>
           </div>
         </div>
@@ -169,7 +169,7 @@
           <div class="card-body">
             <p class="card-text">Pierre-Auguste Renoir</p>
             <p><strong>NT 1090</strong></p>
-            <button type="button" class="btn btn-outline-dark">more</button>
+            <a href="/book/insidepage/renoir" class="btn btn-outline-dark">more</a>
             <button type="button" class="btn btn-outline-danger">Add to Cart</button>
           </div>
         </div>
@@ -181,7 +181,7 @@
             <p class="card-text">Helen Jean 1912</p>
             <p><strong>NT 530</strong></p>
             <div class="d-btn">
-              <button type="button" class="btn btn-outline-dark">more</button>
+              <a href="/book/insidepage/helen-jean-1912" class="btn btn-outline-dark">more</a>
               <button type="button" class="btn btn-outline-danger">Add to Cart</button>
             </div>
           </div>
@@ -193,7 +193,7 @@
           <div class="card-body">
             <p class="card-text">How to create your Doll</p>
             <p><strong>NT 1200</strong></p>
-            <button type="button" class="btn btn-outline-dark">more</button>
+            <a href="/book/insidepage/how-to-create-your-doll" class="btn btn-outline-dark">more</a>
             <button type="button" class="btn btn-outline-danger">Add to Cart</button>
           </div>
         </div>
@@ -204,7 +204,7 @@
           <div class="card-body">
             <p class="card-text">Japan : cat culture</p>
             <p><strong>NT 490</strong></p>
-            <button type="button" class="btn btn-outline-dark">more</button>
+            <a href="/book/insidepage/japan-cat-culture" class="btn btn-outline-dark">more</a>
             <button type="button" class="btn btn-outline-danger">Add to Cart</button>
           </div>
         </div>
@@ -215,7 +215,7 @@
           <div class="card-body">
             <p class="card-text">Metcalf’s Fruit Syrups</p>
             <p><strong>NT 380</strong></p>
-            <button type="button" class="btn btn-outline-dark">more</button>
+            <a href="/book/insidepage/metcalfs-fruit-syrups" class="btn btn-outline-dark">more</a>
             <button type="button" class="btn btn-outline-danger">Add to Cart</button>
           </div>
         </div>
@@ -226,7 +226,7 @@
           <div class="card-body">
             <p class="card-text">Ammi Phillips</p>
             <p><strong>NT 1500</strong></p>
-            <button type="button" class="btn btn-outline-dark">more</button>
+            <a href="/book/insidepage/ammi-phillips" class="btn btn-outline-dark">more</a>
             <button type="button" class="btn btn-outline-danger">Add to Cart</button>
           </div>
         </div>
@@ -237,7 +237,7 @@
           <div class="card-body">
             <p class="card-text">Cat Daily</p>
             <p><strong>NT 690</strong></p>
-            <button type="button" class="btn btn-outline-dark">more</button>
+            <a href="/book/insidepage/cat-daily" class="btn btn-outline-dark">more</a>
             <button type="button" class="btn btn-outline-danger">Add to Cart</button>
           </div>
         </div>
@@ -248,7 +248,7 @@
           <div class="card-body">
             <p class="card-text">Jules Dupré</p>
             <p><strong>NT 1380</strong></p>
-            <button type="button" class="btn btn-outline-dark">more</button>
+            <a href="/book/insidepage/jules-dupre" class="btn btn-outline-dark">more</a>
             <button type="button" class="btn btn-outline-danger">Add to Cart</button>
           </div>
         </div>
@@ -259,7 +259,7 @@
           <div class="card-body">
             <p class="card-text">Amedeo Modigliani</p>
             <p><strong>NT 2100</strong></p>
-            <button type="button" class="btn btn-outline-dark">more</button>
+            <a href="/book/insidepage/amedeo-modigliani" class="btn btn-outline-dark">more</a>
             <button type="button" class="btn btn-outline-danger">Add to Cart</button>
           </div>
         </div>
@@ -270,7 +270,7 @@
           <div class="card-body">
             <p class="card-text">gold(05/2021)</p>
             <p><strong>NT 300</strong></p>
-            <button type="button" class="btn btn-outline-dark">more</button>
+            <a href="/book/insidepage/gold-05-2021" class="btn btn-outline-dark">more</a>
             <button type="button" class="btn btn-outline-danger">Add to Cart</button>
           </div>
         </div>
@@ -281,7 +281,7 @@
           <div class="card-body">
             <p class="card-text">YANN LEE</p>
             <p><strong>NT 690</strong></p>
-            <button type="button" class="btn btn-outline-dark">more</button>
+            <a href="/book/insidepage/yann-lee" class="btn btn-outline-dark">more</a>
             <button type="button" class="btn btn-outline-danger">Add to Cart</button>
           </div>
         </div>
@@ -292,7 +292,7 @@
           <div class="card-body">
             <p class="card-text">Combined Shows</p>
             <p><strong>NT 450</strong></p>
-            <button type="button" class="btn btn-outline-dark">more</button>
+            <a href="/book/insidepage/combined-shows" class="btn btn-outline-dark">more</a>
             <button type="button" class="btn btn-outline-danger">Add to Cart</button>
           </div>
         </div>
