--- a/src/main/resources/static/css/bpage.css
+++ b/src/main/resources/static/css/bpage.css
@@ -21,7 +21,22 @@
 .title{
     text-align: center;
     margin-bottom: 50px;
+    
 }
+.title h3{
+    font-family:  Arial, Helvetica, sans-serif, "微軟正黑體","黑體","宋體",sans-serif;
+}
+@media(max-width:991.98px){
+    .title h3{
+        font-size:25px;
+    }
+}
+@media(max-width:575.98px){
+    .title h3{
+        font-size:20px;
+    }
+}
+
 /*-------title end--------*/
 
 /*------- books cover start--------*/
