--- a/src/main/resources/templates/bookland_home.html
+++ b/src/main/resources/templates/bookland_home.html
@@ -54,7 +54,7 @@
   <navbar>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
 
-      <button type="button" class="btn btn-line" data-toggle="modal" data-target=".bd-example-modal-sm">
+      <button type="button" class="btn btn-line btn-line-home" data-toggle="modal" data-target=".bd-example-modal-sm">
         <img src="/static/css/icon/colorline.svg" width="40px" class="line"></button>
       <div class="modal fade bd-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel"
         aria-hidden="true">
